// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldName renders a geo field, useShortDots is set to true 1`] = `
<span
  class="dscField--noResults"
  title="Geo point field"
>
  <span
    aria-label="Geo point field"
    class="dscField__icon kuiIcon fa-globe"
  />
  <span
    class="dscFieldName"
  >
    t.t.test
  </span>
</span>
`;

exports[`FieldName renders a number field by providing a field record, useShortDots is set to false 1`] = `
<span
  class=""
  title="Number field"
>
  <span
    aria-label="Number field"
    class="dscField__icon"
  >
    <strong
      aria-hidden="true"
    >
      #
    </strong>
  </span>
  <span
    class="dscFieldName"
  >
    test.test.test
  </span>
</span>
`;

exports[`FieldName renders a string field by providing fieldType and fieldName 1`] = `
<span
  class=""
  title="String field"
>
  <span
    aria-label="String field"
    class="dscField__icon"
  >
    <strong
      aria-hidden="true"
    >
      t
    </strong>
  </span>
  <span
    class="dscFieldName"
  >
    test
  </span>
</span>
`;
